Finish todo 1 and 2

--- a/lc101/techjobs-mvc-master/src/main/resources/templates/search.html
+++ b/lc101/techjobs-mvc-master/src/main/resources/templates/search.html
@@ -36,6 +36,7 @@
     <hr />
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <h3 th:if="${jobs}" th:text="${jobs.size() + ' results'}"> </h3>
     <table class="job-listing" th:each="job : ${jobs}">
         <tr th:each="column : ${job}">
             <!--#strings.capitalizeWords() to capitalize the field name-->
