--- a/lc101/techjobs-mvc-master/src/main/resources/templates/list-jobs.html
+++ b/lc101/techjobs-mvc-master/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,7 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - Use the same list display from search.html -->
-
+    <h3 th:text="${jobs.size() + ' results'}"> </h3>
     <table class="job-listing" th:each="job : ${jobs}">
         <tr th:each="column : ${job}">
             <!--#strings.capitalizeWords() to capitalize the field name-->
