--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,28 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org/">
 
 <head th:fragment="head">
-
     <title>U-Grow</title>
+    <link rel="stylesheet" href="../../css/styles.css" />
 </head>
 
 <body>
 
-<div th:fragment="page-header" class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header"></div>
-
-        <div th:if="${sessionOn} == true" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a th:href="@{/logout}" class="navbar-brand">Logout</a></li>
-            </ul>
+    <article th:fragment="page-header">
+        <div>
+            <div th:if="${sessionOn} == true">
+                <ul>
+                    <li><a th:href="@{/logout}">Logout</a></li>
+                </ul>
+            </div>
+            <div th:if="${sessionOn} == false">
+                <ul>
+                    <li><a th:href="@{/login}">Login</a></li>
+                </ul>
+            </div>
         </div>
-        <div th:if="${sessionOn} == false" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a th:href="@{/login}" class="navbar-brand">Login</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+    </article>
 
 </body>
+    <script type="text/javascript" src="../../js/scripts.js"></script>
 </html>
