--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
-    <link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
-    <script src='lib/jquery.min.js'></script>
-    <script src='lib/moment.min.js'></script>
-    <script src='fullcalendar/fullcalendar.js'></script>
+    <link rel='stylesheet' href='css/fullcalendar.css' />
+    <script src='js/jquery.min.js'></script>
+    <script src='js/moment.min.js'></script>
+    <script src='js/fullcalendar.js'></script>
     <script>$(document).ready(function() {
 
         // page is now ready, initialize the calendar...
 
         $('#calendar').fullCalendar({
             // put your options and callbacks here
+
         })
 
     });</script>
@@ -39,7 +40,8 @@
     <div>
         <h2>Calendar or Map?</h2>
     </div>
+    <div id='calendar'></div>
 </div>
-<div id='calendar'></div>
+
 </body>
 </html>
