--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,7 +3,7 @@
 
 <head th:fragment="head">
     <title>U-Grow</title>
-    <link rel='stylesheet' href='css/fullcalendar.css' />
+    <link rel='stylesheet' href='css/fullcalendar.css'/>
     <script src='js/jquery.min.js'></script>
     <script src='js/moment.min.js'></script>
     <script src='js/fullcalendar.js'></script>
@@ -13,6 +13,19 @@
 
         $('#calendar').fullCalendar({
             // put your options and callbacks here
+            events: [
+                {
+                    title: 'Event1',
+                    start: '2018-02-22'
+                },
+                {
+                    title: 'Event2',
+                    start: '2018-02-24'
+                }
+                // etc...
+            ],
+            color: 'yellow',   // an option!
+            textColor: 'black' // an option!
         })
 
     });</script>
