--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,22 +7,21 @@
 </head>
 
 <body>
-
-    <article th:fragment="page-header">
-        <div>
-            <div th:if="${sessionOn} == true">
-                <ul>
-                    <li><a th:href="@{/logout}">Logout</a></li>
-                </ul>
-            </div>
-            <div th:if="${sessionOn} == false">
-                <ul>
-                    <li><a th:href="@{/login}">Login</a></li>
-                </ul>
-            </div>
+    <header th:fragment="header">
+        <div class="headerLeft">
+            <h1>U-Grow</h1>
         </div>
-    </article>
-
+        <div class="headerRight" th:if="${sessionOn} == true">
+            <ul>
+                <li><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
+        <div class="headerRight" th:if="${sessionOn} == false">
+            <ul>
+                <li><a th:href="@{/login}">Login</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
     <script type="text/javascript" src="../../js/scripts.js"></script>
 </html>
