--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,13 +3,11 @@
 <head th:replace="fragments :: head">
 </head>
 <body>
-
-<div th:replace="fragments :: page-header"></div>
-
-<div>
-    <h1>Login to U-Grow</h1>
-
+<div th:replace="fragments :: header"></div>
+<div th:replace="fragments :: page"></div>
+<div class="loginForm">
     <form method="post" style="max-width:600px;" th:object="${loginForm}">
+        <h1>Login</h1>
         <div class="form-group">
             <label th:for="username">Enter Username</label>
             <textarea th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></textarea>
@@ -24,8 +22,6 @@
         </div>
         <button class="button1" type="submit"><h3>Login</h3></button>
     </form>
-
 </div>
-
 </body>
 </html>
