--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,7 +9,7 @@
     <form method="post" style="max-width:600px;" th:object="${loginForm}">
         <h1>Login</h1>
         <div class="form-group">
-            <label th:for="username">Enter Username</label>
+            <label th:for="username">Username</label>
             <textarea th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></textarea>
             <p th:errors="*{username}" class="error"></p>
             <p th:text="${usernameError}" class="error"></p>
