--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4,10 +4,10 @@
 body {
      display: grid;
      grid-template-areas: 'header header header header header'
-     '. form form form .';
+     'form form form form form';
      grid-gap: 5px;
      grid-template-rows: auto;
-     grid-template-columns: 25fr 50fr 25fr;
+     grid-template-columns: 10fr 80fr 10fr;
      font-family: 'Source Sans Pro', sans-serif;
 }
 header {
@@ -28,10 +28,12 @@ header {
 .loginForm {
     grid-area: form;
     grid-gap: 5px;
+    justify-self: center;
 }
 .registrationForm {
     grid-area: form;
     grid-gap: 5px;
+    justify-self: center;
 }
 form {
     grid-area: form;
