--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -7,16 +7,16 @@
 <div th:replace="fragments :: page"></div>
 <div class="loginForm">
     <form method="post" style="max-width:600px;" th:object="${loginForm}">
-        <h1>Login</h1>
+        <h2>Login</h2>
         <div class="form-group">
-            <label th:for="username">Username</label>
+            <label th:for="username"><h3>Username</h3></label>
             <textarea th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></textarea>
             <p th:errors="*{username}" class="error"></p>
             <p th:text="${usernameError}" class="error"></p>
         </div>
 
         <div class="form-group">
-            <label th:for="password">Password</label>
+            <label th:for="password"><h3>Password</h3></label>
             <textarea type="password" th:field="*{password}" class="form-control" rows="2" placeholder="Password*"></textarea>
             <p th:errors="*{password}" class="error"></p>
         </div>
