added registration link to header

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,6 +20,7 @@
             <div class="headerRight" th:if="${sessionOn} == false">
                 <ul>
                     <li><a th:href="@{/login}">Login</a></li>
+                    <li><a th:href="@{/register}">Register</a></li>
                 </ul>
             </div>
         </div>
