--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments :: head">
 </head>
 <body>
-
+<div th:replace="fragments :: header"></div>
 <div th:replace="fragments :: page"></div>
 
 <div>
