added header to home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div th:replace="fragments :: page-header"></div>
+<div th:replace="fragments :: header"></div>
 
 <div>
     <h1>Welcome Home <span th:text="${username}"></span>.</h1>
