added frontend2 branch

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <h1>Welcome Home <span th:text="${username}"></span>.</h1>
 </div>
 <div class="row">
-    <div class ="col-md-3 tried-section">
+    <div>
         <section class="sidebar">
             <h2>Todo?</h2>
             <p>You have nothing planted so nothing todo</p>
