--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,8 +3,7 @@
 }
 body {
      display: grid;
-     grid-template-areas: 'header header header header header'
-     'form form form form form';
+     grid-template-areas: 'header header header header header';
      grid-gap: 5px;
      grid-template-rows: auto;
      grid-template-columns: 10fr 80fr 10fr;
@@ -13,30 +12,39 @@ body {
 header {
     grid-area: header;
 }
+.header {
+    max-width: 100%;
+	height: 363px;
+	background-image: url("../img/pots.jpg");
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+  	background-position: center;
+}
 .wideHeader {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: auto 14px;
 }
-.headerLeft {
-
-}
-.headerRight li {
+.headerRight li, .headerLeft li {
+    grid-area: header;
     display: inline-block;
 }
 .loginForm {
-    grid-area: form;
+    display:grid;
     grid-gap: 5px;
-    justify-self: center;
+    justify-content: space-around;
 }
 .registrationForm {
-    grid-area: form;
-    grid-gap: 5px;
-    justify-self: center;
+    display:grid;
+    justify-content: space-around;
 }
 form {
-    grid-area: form;
+    grid-area: header;
+    background-color: white;
 }
 button {
 	background-color: #008DD5;
