--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head">
-</head>
-<body>
-<div th:replace="fragments :: header"></div>
-<div th:replace="fragments :: page"></div>
-<div class="loginForm">
-    <form method="post" style="max-width:600px;" th:object="${loginForm}">
-        <h2>Login</h2>
-        <div class="form-group">
-            <label th:for="username"><h3>Username</h3></label>
-            <textarea th:field="*{username}" class="form-control" rows="1" placeholder="Username*"></textarea>
-            <p th:errors="*{username}" class="error"></p>
-            <p th:text="${usernameError}" class="error"></p>
+<head th:replace="fragments/head :: head"></head>
+<header class="header">
+    <div class="wideHeader">
+        <div class="headerLeft">
+            <h1>U-Grow</h1>
         </div>
+        <div class="headerRight" th:if="${sessionOn} == true">
+            <ul>
+                <li><a th:href="@{/logout}">Logout</a></li>
+            </ul>
+        </div>
+        <div class="headerRight" th:if="${sessionOn} == false">
+            <ul>
+                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/register}">Register</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="loginForm">
+        <form method="post" style="max-width:600px;" th:object="${loginForm}">
+            <h2>Login</h2>
+            <div class="form-group">
+                <label th:for="username"><p>Username</p></label>
+                <textarea th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></textarea>
+                <p th:errors="*{username}" class="error"></p>
+                <p th:text="${usernameError}" class="error"></p>
+            </div>
 
-        <div class="form-group">
-            <label th:for="password"><h3>Password</h3></label>
-            <textarea type="password" th:field="*{password}" class="form-control" rows="1" placeholder="Password*"></textarea>
-            <p th:errors="*{password}" class="error"></p>
-        </div>
-        <button class="button1" type="submit"><h3>Login</h3></button>
-    </form>
-</div>
+            <div class="form-group">
+                <label th:for="password"><p>Password</p></label>
+                <textarea type="password" th:field="*{password}" class="form-control" rows="2" placeholder="Password*"></textarea>
+                <p th:errors="*{password}" class="error"></p>
+            </div>
+            <button class="button1" type="submit"><h3>Login</h3></button>
+        </form>
+    </div>
+</header>
+<body>
 </body>
+<script type="text/javascript" src="../../js/scripts.js"></script>
 </html>
