--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/" xmlns="http://www.w3.org/1999/html">
-<head th:replace="fragments :: head"></head>
-<div th:replace="fragments :: page"></div>
-<div th:replace="fragments :: header"></div>
-<div class="registrationForm">
-    <form method="post" style="max-width:600px;" th:object="${registerForm}">
-        <h2 th:text="${title}"></h2>
-        <div class="form-group">
-            <label th:for="username"><h3>Username</h3></label>
-            <textarea th:field="*{username}"></textarea>
-            <p th:errors="*{username}" class="error"></p>
-            <p th:text="${existingUsername}" class="error"></p>
+<html xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="fragments/head :: head"></head>
+<body>
+<header class="header">
+    <div class="wideHeader">
+        <div class="headerLeft">
+            <h1>U-Grow</h1>
         </div>
-
-        <div class="form-group">
-            <label th:for="password"><h3>Password</h3></label>
-            <textarea th:field="*{password}" type="password"></textarea>
-            <p th:errors="*{password}" class="error"></p>
+        <div class="headerRight" th:if="${sessionOn} == true">
+            <ul>
+                <li><a th:href="@{/logout}">Logout</a></li>
+            </ul>
         </div>
-
-        <div class="form-group">
-            <label th:for="verifyPassword"><h3>Verify Password</h3></label>
-            <textarea th:field="*{verifyPassword}" type="password"></textarea>
-            <div class="error" th:text="${verifyError}"></div>
+        <div class="headerRight" th:if="${sessionOn} == false">
+            <ul>
+                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/register}">Register</a></li>
+            </ul>
         </div>
+    </div>
+    <div class="registrationForm">
+        <form method="post" style="max-width:600px;" th:object="${registerForm}">
+            <h2 th:text="${title}"></h2>
+            <div class="form-group">
+                <label th:for="username"><p>Username</p></label>
+                <textarea th:field="*{username}"></textarea>
+                <p th:errors="*{username}" class="error"></p>
+                <p th:text="${existingUsername}" class="error"></p>
+            </div>
 
-        <button type="submit" value="Add"><h3>Add</h3></button>
-    </form>
-</div>
+            <div class="form-group">
+                <label th:for="password"><p>Password</p></label>
+                <textarea th:field="*{password}" type="password"></textarea>
+                <p th:errors="*{password}" class="error"></p>
+            </div>
+
+            <div class="form-group">
+                <label th:for="verifyPassword"><p>Verify Password</p></label>
+                <textarea th:field="*{verifyPassword}" type="password"></textarea>
+                <div class="error" th:text="${verifyError}"></div>
+            </div>
+
+            <button type="submit" value="Add"><h3>Add</h3></button>
+        </form>
+    </div>
+</header>
+</body>
+<script type="text/javascript" src="../../js/scripts.js"></script>
 </html>
