--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head :: head"></head>
 <header class="header">
     <div class="wideHeader">
-        <div class="headerLeft">
+        <div class="headerLeft logo">
             <h1>U-Grow</h1>
         </div>
         <div class="headerRight" th:if="${sessionOn} == true">
