--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -4,7 +4,7 @@
 <body>
 <header class="header">
     <div class="wideHeader">
-        <div class="headerLeft">
+        <div class="headerLeft logo">
             <h1>U-Grow</h1>
         </div>
         <div class="headerRight" th:if="${sessionOn} == true">
