--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,10 +20,8 @@
     </div>
 </header>
 
-<div>
+<section>
     <h1>Welcome Home <span th:text="${username}"></span>.</h1>
-</div>
-<div>
     <div class ="tried-section">
         <section class="sidebar">
             <h2>Todo?</h2>
@@ -37,11 +35,10 @@
             </table>
         </section>
     </div>
-    <div>
-        <h2>Calendar or Map?</h2>
-    </div>
+</section>
+<article>
+    <h2>Calendar or Map?</h2>
     <div id='calendar'></div>
-</div>
-
+</article>
 </body>
 </html>
