--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -19,21 +19,25 @@
         </div>
     </div>
     <div class="loginForm">
-        <form method="post" style="max-width:600px;" th:object="${loginForm}">
-            <h2>Login</h2>
+        <form method="post" th:object="${loginForm}">
+            <div>
+                <h2>Login</h2>
+            </div>
             <div class="form-group">
-                <label th:for="username"><p>Username</p></label>
-                <textarea th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></textarea>
+                <label th:for="username">Username</label>
+                <input type="text" th:field="*{username}" class="form-control" rows="2" placeholder="Username*"></input>
                 <p th:errors="*{username}" class="error"></p>
                 <p th:text="${usernameError}" class="error"></p>
             </div>
 
             <div class="form-group">
-                <label th:for="password"><p>Password</p></label>
-                <textarea type="password" th:field="*{password}" class="form-control" rows="2" placeholder="Password*"></textarea>
+                <label th:for="password">Password</label>
+                <input type="password" th:field="*{password}" class="form-control" rows="2" placeholder="Password*"></input>
                 <p th:errors="*{password}" class="error"></p>
             </div>
-            <button class="button1" type="submit"><h3>Login</h3></button>
+            <div class="lower">
+                <input type="submit" value="Login"></input>
+            </div>
         </form>
     </div>
 </header>
