--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -21,27 +21,30 @@
     </div>
     <div class="registrationForm">
         <form method="post" style="max-width:600px;" th:object="${registerForm}">
-            <h2 th:text="${title}"></h2>
+            <div>
+                <h2 th:text="${title}"></h2>
+            </div>
             <div class="form-group">
-                <label th:for="username"><p>Username</p></label>
-                <textarea th:field="*{username}"></textarea>
+                <label th:for="username">Username</label>
+                <input type="text" th:field="*{username}"></input>
                 <p th:errors="*{username}" class="error"></p>
                 <p th:text="${existingUsername}" class="error"></p>
             </div>
 
             <div class="form-group">
-                <label th:for="password"><p>Password</p></label>
-                <textarea th:field="*{password}" type="password"></textarea>
+                <label th:for="password">Password</label>
+                <input th:field="*{password}" type="password"></input>
                 <p th:errors="*{password}" class="error"></p>
             </div>
 
             <div class="form-group">
-                <label th:for="verifyPassword"><p>Verify Password</p></label>
-                <textarea th:field="*{verifyPassword}" type="password"></textarea>
+                <label th:for="verifyPassword">Verify Password</label>
+                <input th:field="*{verifyPassword}" type="password"></input>
                 <div class="error" th:text="${verifyError}"></div>
             </div>
-
-            <button type="submit" value="Add"><h3>Add</h3></button>
+            <div class="lower">
+                <input type="submit" value="Add"></input>
+            </div>
         </form>
     </div>
 </header>
