--- a/src/main/resources/templates/list-todos.html
+++ b/src/main/resources/templates/list-todos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head">
+<head th:replace="fragments/head :: head">
 </head>
 <body>
 
