--- a/src/main/resources/templates/new-todo.html
+++ b/src/main/resources/templates/new-todo.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<div th:replace="fragments :: page-header"></div>
+<!--<div th:replace="fragments :: page-header"></div>-->
 
 <div class="container body-content">
 
