Fixed it to be possible look up todo and add color to errors

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -141,3 +141,11 @@ article {
 #tomatoesLink, #potatoesLink {
     cursor: pointer;
 }
+
+.error {
+    color: red;
+}
+
+.todo-detail-img {
+    width: 200px;
+}
