Add todo list into the home page but need to change it to be able to click an option and add into calendar and display todo

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,6 +32,8 @@
     </div>
     <div>
         <h2>Guides</h2>
+        <table th:replace="list-todos :: single-todo">
+        </table>
     </div>
 </section>
 <article>
