--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -138,7 +138,7 @@ input[type=submit]:active {
 article {
     grid-area: article;
 }
-#tomatoesLink, #potatoesLink {
+.Link {
     cursor: pointer;
 }
 
