--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -10,6 +10,22 @@ body {
      grid-template-rows: auto;
      font-family: 'Source Sans Pro', sans-serif;
 }
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    color: #fff;
+}
+a:hover {
+    text-decoration: none;
+    text-shadow: 0 0 12px #999;
+}
+a:active {
+    text-decoration: underline;
+}
+a.homepageLogoutLink {
+    color: black;
+}
 header {
     grid-area: header;
 }
@@ -49,7 +65,7 @@ header {
 form {
     grid-area: header;
     background-color: white;
-    margin: 0 auto;
+    margin-left: 18em;
     border-radius: 3px;
     border: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
