--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,13 +8,7 @@
     </div>
     <div class="headerRight" th:if="${sessionOn} == true">
         <ul>
-            <li><a th:href="@{/logout}">Logout</a></li>
-        </ul>
-    </div>
-    <div class="headerRight" th:if="${sessionOn} == false">
-        <ul>
-            <li><a th:href="@{/login}">Login</a></li>
-            <li><a th:href="@{/register}">Register</a></li>
+            <li><a class="homepageLogoutLink" th:href="@{/logout}">Logout</a></li>
         </ul>
     </div>
 </header>
