--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -18,6 +18,12 @@
             </ul>
         </div>
     </div>
+    <div class="subtext">
+        <h3>Grow the plants, fruits, and vegetables of your DREAMS.
+        </h3>
+        <p>Human-curated calendars and guides.</p>
+        <p>Auto-Magically at your green-thumb.</p>
+    </div>
     <div class="loginForm">
         <form method="post" th:object="${loginForm}">
             <div>
