--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -40,6 +40,14 @@ header {
   	background-size: cover;
   	background-position: center;
 }
+.subtext {
+    color: #fff;
+    padding: 1em;
+    line-height: 1.5;
+}
+.subtext > p {
+    font-weight: 18px;
+}
 .wideHeader {
     display: flex;
     align-items: center;
@@ -63,9 +71,10 @@ header {
     justify-content: space-around;
 }
 form {
-    grid-area: header;
+    position: relative;
+    bottom: 9em;
+    left:18em;
     background-color: white;
-    margin-left: 18em;
     border-radius: 3px;
     border: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
