Finish adding to the finish product

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -166,3 +166,16 @@ article {
 #tomatoesLink, #potatoesLink {
     cursor: pointer;
 }
+
+.error {
+    color: red;
+}
+
+container body-content {
+    text-align: center;
+}
+
+a:linkadd {
+    color: black;
+
+}
