--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
 
     <div>
         <h2>Guides</h2>
-        <h2><a id="linkadd" th:href="@{/todo/add}">Add Todo</a></h2>
+        <h2><a id='todoadd' th:href="@{/todo/add}">Add Todo</a></h2>
     </div>
 </section>
 <article>
